<resources>
    <string name="app_name">Engineering Calculator</string>
    <string name="move_carriage_left"><![CDATA[>]]></string>
    <string name="move_carriage_right"><![CDATA[<]]></string>
    <string name="equals">=</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="percent">%</string>
    <string name="_00">00</string>
    <string name="addition">+</string>
    <string name="multiplication">*</string>
    <string name="subtraction">-</string>
    <string name="division">/</string>
    <string name="clear">C</string>
    <string name="scope_left">(</string>
    <string name="scope_right">)</string>
    <string name="func_abs">|x|</string>
    <string name="func_log">log</string>
    <string name="func_sin">sin</string>
    <string name="func_cos">cos</string>
    <string name="func_tan">tan</string>
    <string name="func_ln">ln</string>
    <string name="const_e">e</string>
    <string name="func_pow">pow</string>
</resources>
