<?xml version="1.0" encoding="utf-8"?>

<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:columnCount="6"
    app:rowCount="4"
    style="@style/NumPad">

    <Button
        style="@style/NumPadButtons"
        app:layout_column="1"
        android:text="@string/_7" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_8" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_9" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/clear" />

    <ImageButton
        style="@style/NumPadButtons"
        app:srcCompat="@drawable/ic_backspace_white_56dp" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/move_carriage_right" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_4" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_5" />

    <Button
        style="@style/NumPadButtons"

        android:text="@string/_6" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/division" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/subtraction" />

    <Button
        style="@style/NumPadButtons"

        android:text="@string/move_carriage_left" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_1" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_2" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_3" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/multiplication" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/addition" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/dot"
        app:layout_column="1"
        app:layout_row="3" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_0" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/equals" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_00" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/percent" />



</androidx.gridlayout.widget.GridLayout>