<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/NumPad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:columnCount="4"
    app:rowCount="4">

    <ImageButton

        style="@style/NumPadButtons"
        app:srcCompat="@drawable/ic_switch_layout_white_56dp" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_7" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_8" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_9" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/move_carriage_right" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_4" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_5" />

    <Button
        style="@style/NumPadButtons"

        android:text="@string/_6" />

    <Button
        style="@style/NumPadButtons"

        android:text="@string/move_carriage_left" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_1" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_2" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_3" />

    <Button
        style="@style/NumPadButtons"
        app:layout_row="3"
        app:layout_column="1"
        android:text="@string/dot" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_0" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/equals" />
</androidx.gridlayout.widget.GridLayout>