<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/NumPad"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:columnCount="2"
    app:rowCount="4">

    <Button
        style="@style/NumPadButtons"
        android:text="@string/clear" />

    <ImageButton
        style="@style/NumPadButtons"
        app:srcCompat="@drawable/ic_backspace_white_56dp" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/division" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/subtraction" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/multiplication" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/addition" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/_00" />

    <Button
        style="@style/NumPadButtons"
        android:text="@string/percent" />

</androidx.gridlayout.widget.GridLayout>